kube/backend/siacdn-backend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: siacdn-backend
  namespace: sia
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: siacdn-backend
    spec:
      volumes:
        - name: siacdn-backend
          persistentVolumeClaim:
            claimName: siacdn-backend
      containers:
        - name: sia-docker
          image: gcr.io/gradientzoo-1233/siacdn-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9095
          command: ["/siacdn/siacdn", "serve", "--db=/siacdn/data/database.json"]
          volumeMounts:
            - mountPath: "/siacdn/data"
              name: siacdn-backend
