kube/backend/siacdn-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: siacdn-backend
  namespace: sia
spec:
  type: NodePort
  ports:
    - name: http
      port: 9095
      targetPort: 9095
      protocol: TCP
  selector:
    app: siacdn-backend
